# LSDI-Project-

./: .gitignore  README.md  Summarize Feedback and next steps.docx  daily_market_mix.csv  day_ahead_energy_prices.csv  project.ipynb  scaper.ipynb  scraper_Weather.ipynb
copy_hand_in/: cpy.ipynb
data/: X_benchmark.csv  daily_weather.csv  day_ahead_energy_prices.csv  forecast_weather.csv  germany_weather_average.csv  hourly_market_metrics_cleaned.csv  merged.csv  prdicted_renewable_energy_to_be_scraped.json  predictions.csv  y_t.csv
env/: pyvenv.cfg
hand_in/: README.md  auto_ml.ipynb  jury.ipynb  notebook.ipynb  predictions.csv  pyproject.toml  report_BOH.md
hand_in/.ipynb_checkpoints/: notebook-checkpoint.ipynb
hand_in/data/: day_ahead_energy_prices.csv  debug_filled_day_ahead_energy_prices.csv  debug_filled_germany_weather_average.csv  debug_hourly_market_mix_cleaned.csv  filled_day_ahead_energy_prices.csv  filled_germany_weather_average.csv  filled_hourly_market_mix_cleaned.csv  germany_weather_average.csv
hand_in/data_science_challenge/data/2024-02-18/: prediction.csv
hand_in/src/: benchmark.py  data_loading.py  dataset.py  feature.py  final_prediction.py  plot.py  prediciton.py  prediction.py  scraping.py  widgets.py
hand_in_Elias/: notebook.ipynb
hand_in_Yuka/: notebook.ipynb
models/: Prophet_Model.ipynb  The_Prophet_Model.ipynb  benchmark.ipynb  benchmark_automl.ipynb  benchmark_combined.ipynb  phd_student_electricity_price_prediction.ipynb  project.ipynb
scraper/: scaper - Kopie.ipynb  scaper.ipynb  scraper_weather_predicitons.ipynb  (+1 more)
(+152 files in other folders)
