[tool.poetry]
name = "lsdi-project"
version = "0.1.0"
description = "Our deliverable for the LSDI Project and the BTW data science challenge"
authors = ["Ben-Oliver Hosak <b.hosak@campus.tu-berlin.de>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
numpy = "^2.2.2"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
tqdm = "^4.67.1"
xgboost = "^2.1.4"
optuna = {extras = ["visualization"], version = "^4.2.1"}
datetime = "^5.5"
pytz = "^2025.1"
requests = "^2.32.3"
openmeteo-requests = "^1.3.0"
requests-cache = "^1.2.1"
retry-requests = "^2.0.0"
seaborn = "^0.13.2"
matplotlib = "^3.10.0"
ipywidgets = "^8.1.5"
ipython = "^8.32.0"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
prophet = "^1.1.6"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
